# ZectrixAPI

./: LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: python-publish.yml
src/zectrixAPI/: __init__.py  cli.py  client.py  config.py
