[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zectrixAPI"
version = "0.1.0"
description = "极趣云平台 CLI 工具"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "click>=8.0",
]

[project.scripts]
zectrix = "zectrixAPI.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
