[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zectrixAPI"
dynamic = ["version"]
description = "极趣云平台 CLI 工具"
readme = "README.md"
license = "MIT"
authors = [
    { name = "lclichen" },
]
keywords = ["zectrix", "cli", "iot", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/lclichen/ZectrixAPI"
Repository = "https://github.com/lclichen/ZectrixAPI"
Issues = "https://github.com/lclichen/ZectrixAPI/issues"

[project.scripts]
zectrix = "zectrixAPI.cli:main"

[tool.setuptools.dynamic]
version = { attr = "zectrixAPI.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["zectrixAPI*"]
